--- a/client/index.html
+++ b/client/index.html
@@ -4,30 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SAE3.DWeb-DI.03 base code</title>
-    <script src="https://cdn.anychart.com/releases/8.13.0/js/anychart-base.min.js" type="text/javascript"></script>
+    <script type="module" src="./src/main.js"></script>
 </head>
 <body class="bg-gray-100">
     <section id="header"></section>
-    <script type="module" src="src/main.js"></script>
-    <script>
-      anychart.onDocumentLoad(function () {
-        // create an instance of a pie chart
-        var chart = anychart.pie();
-        // set the data
-        chart.data([
-          ["Chocolate", 5],
-          ["Rhubarb compote", 2],
-          ["Crêpe Suzette", 2],
-          ["American blueberry", 2],
-          ["Buttermilk", 1]
-        ]);
-        // set chart title
-        chart.title("Top 5 pancake fillings");
-        // set the container element 
-        chart.container("header");
-        // initiate chart display
-        chart.draw();
-      });
-    </script>
+    <section id="orderstatus"></section>
+    <div id="orderstatus_delivered"></div>
+        <div id="orderstatus_pending"></div>
+        <div id="orderstatus_shipping"></div>
 </body>
 </html>
+<style>
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f7fafc;
+    margin: 0;
+    padding: 0;
+}
+
+#header {
+    background-color: #4a5568;
+    color: white;
+    padding: 20px;
+    text-align: center;
+}
+
+#orderstatus {
+    margin: 20px;
+    padding: 20px;
+    background-color: #edf2f7;
+    border-radius: 8px;
+}
+
+#orderstatus_delivered,
+#orderstatus_pending,
+#orderstatus_shipping {
+    margin: 10px 0;
+    padding: 15px;
+    border-radius: 5px;
+}
+
+#orderstatus_delivered {
+    background-color: #c6f6d5;
+}
+
+#orderstatus_pending {
+    background-color: #fefcbf;
+}
+
+#orderstatus_shipping {
+    background-color: #bee3f8;
+}</style>
