modified:   api/Repository/CustomerRepositery.php 	new file:   client/dist/assets/index-DOEqbDOX.js 	new file:   client/dist/assets/style.css 	new file:   client/dist/index.html 	new file:   client/dist/src/ui/customerorder/index.js 	new file:   client/dist/src/ui/customerorder/template.html 	new file:   client/dist/src/ui/lessstockproduct/index.js 	new file:   client/dist/src/ui/mostsoldproduct/index.js 	new file:   client/dist/src/ui/orderstatus/delivered/index.js 	new file:   client/dist/src/ui/orderstatus/delivered/template.html 	new file:   client/dist/src/ui/orderstatus/pending/index.js 	new file:   client/dist/src/ui/orderstatus/pending/template.html 	new file:   client/dist/src/ui/orderstatus/shipping/index.js 	new file:   client/dist/src/ui/orderstatus/shipping/template.html 	new file:   client/dist/src/ui/salesevolution/index.js 	new file:   client/dist/src/ui/salesevolution/template.html 	new file:   client/dist/src/ui/salespercategory/index.js 	new file:   client/dist/src/ui/salespermonth/index.js 	modified:   client/index.html 	modified:   client/src/data/customerorder.js 	modified:   client/src/index.css 	modified:   client/src/main.js 	modified:   client/src/ui/customerorder/index.js 	modified:   client/src/ui/lessstockproduct/index.js 	modified:   client/src/ui/mostsoldproduct/index.js 	modified:   client/src/ui/salesevolution/index.js 	modified:   client/src/ui/salespercategory/index.js 	modified:   client/src/ui/salespermonth/index.js

--- a/client/index.html
+++ b/client/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SAE3.DWeb-DI.03 base code</title>
+    <title>SAE303</title>
+    <link rel="stylesheet" href="./src/style.css">
     <script type="module" src="./src/main.js"></script>
 </head>
 <body class="">
@@ -37,6 +38,9 @@ body {
 }
 
 #header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #333;
     color: white;
     padding: 1rem;
@@ -121,6 +125,7 @@ select {
     section {
         margin: 1rem;
     }
+
 }
 
 </style>
